Fix css for content FAQ on small screens

--- a/apps/site/app/containers/App/index.module.css
+++ b/apps/site/app/containers/App/index.module.css
@@ -15,7 +15,7 @@
 
 @media only screen and (max-width: 750px) {
   #mainContent{
-    margin: 10px;
-    margin-bottom: 30px;
+    margin: 15px;
+    margin-bottom: 80px;
   }
 }
